infrastructure/base/cert-manager/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    app: cert-manager
    cert-manager.io/disable-validation: "true"
